# xEqt0R

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  TODO.org
include/: arch.hpp  bit.hpp  bus.hpp  cpu.hpp  device.hpp  except.hpp  execute.hpp  field.hpp  instruction.hpp  isa.hpp  memory.hpp  memory_bus.hpp  model_point.hpp  register.hpp  register_file.hpp  settings.hpp  soc.hpp  x_memory_bus.hpp
include/instructions/: instruction.hpp  isa.hpp  switches.hpp
src/: bus.cpp  cpu.cpp  device.cpp  except.cpp  execute.cpp  main.cpp  mapping_tables.cpp  memory.cpp  memory_bus.cpp  register.cpp  register_file.cpp  settings.cpp  soc.cpp  x_memory_bus.cpp
tests/: test_program.txt
